--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="pref_user_pass">pUp</string>
     <string name="pref_user_last_name">pUlp</string>
     <string name="pref_user_first_name">pUfp</string>
+    <string name="pref_pay">pp</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
